crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__collection_intersect_union.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "expr": {
          "left": {
            "left": {
              "domain": {
                "kind": "method",
                "type": "children"
              },
              "path": [
                "name"
              ],
              "type": "projection"
            },
            "op": "intersect",
            "right": {
              "expr": {
                "domain": {
                  "kind": "method",
                  "type": "children"
                },
                "path": [
                  "name"
                ],
                "type": "projection"
              },
              "type": "unique"
            },
            "type": "binary"
          },
          "op": "union",
          "right": {
            "domain": {
              "kind": "field",
              "type": "children"
            },
            "path": [
              "name"
            ],
            "type": "projection"
          },
          "type": "binary"
        },
        "type": "size"
      },
      "type": "number"
    },
    "op": "ge",
    "raw": "size(method.name intersect unique(method.name) union field.name) >= 1",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 1.0
      },
      "type": "number"
    },
    "type": "atom"
  }
}
